# hatnote-websocket

./: .gitignore  README.md  pyproject.toml  software_engineer_test.md
hatnote_websocket/: Presentation.ipynb  Presentation.slides.html  __init__.py  publishers.py  schema.py  subscribers.py
