[tool.poetry]
name = "hatnote_websocket"
version = "0.1.1"
description = "Interesting Producer and Consumer pattern to analyse wikipedia data."
authors = ["Taj <tjgurwara99@gmail.com>"]
license = "MIT"
packages = [ { include = "hatnote_websocket" }, ]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.2"
pydantic = "^1.9.0"
jupyterlab = "^3.3.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
flake8 = "^4.0.1"
pytest = "^7.0.1"
typed-ast = "^1.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
